Screen type Alignment bug fix

--- a/src/Components/StaffSide/Show/Show.scss
+++ b/src/Components/StaffSide/Show/Show.scss
@@ -12,7 +12,6 @@ $box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    background-color: $background-color;
     border-radius: $border-radius;
     box-shadow: $box-shadow;
     max-width: 500px;
